feat(condo): DOMA-6222 PropertyMeter and PropertyMeterReading schemas (#3413)
* feat(condo): DOMA-6222 init CommunalMeter schema

* feat(condo): DOMA-6222 write CommunalMeter schema and access

* test(condo): DOMA-6222 write tests

* fix(condo): DOMA-6222 fix checking wrong schema in access of CommunalMeter

* feat(condo): DOMA-6222 init CommunalMeterReading schema

* feat(condo): DOMA-6222 use addOrganizationFieldPlugin. Write access. fix gql and regenerate types

* test(condo): DOMA-6222 write tests for CommunalMeterReading

* feat(condo): DOMA-6222 make migration file

* feat(condo): DOMA-6156 rename CommunalMeter to PropertyMeter

* feat(condo): DOMA-6156 move common field to constants

* refactor(condo): DOMA-6222 rm validation of field number and add some tests

* feat(condo): DOMA-6222 frontend of PropertyMeter

* chore(condo): DOMA-6222 rebase and regenerate migration file

* fix(condo): DOMA-6222 add organization to gql types of PropertyMeter

* feat(condo): DOMA-6222 add new MeterReadingResource 'CRM'

* fix(condo): DOMA-6222 generate migration

* fix(condo): DOMA-6222 fix search filter on propertyMeter page

* fix(condo): DOMA-6222 fix sidebar and meter readings creation button messages

* fix(condo): DOMA-6222 regenerate migrations and update submodule and gql types

* chore(condo): DOMA-6222 review fixes

* chore(condo): DOMA-6222 another update callcenter submodule

* fix(condo): DOMA-6222 rm comment on operation in manual migration

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -582,6 +582,8 @@
   "pages.condo.meter.index.PageTitle": "Meters log",
   "pages.condo.meter.index.EmptyList.header": "The list is empty",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Add new meter",
+  "pages.condo.meter.index.meterTab": "Submeter log",
+  "pages.condo.meter.index.propertyMeterTab": "Meter log",
   "pages.condo.meter.Place": "Place",
   "pages.condo.meter.MeterReading": "Reading",
   "pages.condo.meter.MeterReadingDate": "Reading date",
@@ -1072,6 +1074,7 @@
   "meterReadingSource.Messenger.name":"Messengers (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Social media (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "Staff mobile app",
+  "meterReadingSource.crm.name": "CRM",
   "meterResource.ColdWater.name": "Cold water",
   "meterResource.HotWater.name": "Hot water",
   "meterResource.Electricity.name": "Electricity",
