--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -39,7 +39,7 @@
   "CreatedDate": "Дата создания",
   "CreateTicket": "Создать заявку",
   "CreateAppeal": "Создать обращение",
-  "CreateMeterReading": "Сдать показания ИПУ",
+  "CreateMeterReading": "Сдать показания ПУ",
   "CheckAll": "Выбрать всё",
   "CheckedAll": "Выбрано всё",
   "ResidentAppeal": "Обращение жителя",
@@ -189,7 +189,7 @@
   "global.section.employees": "Сотрудники",
   "global.section.contacts": "Жители",
   "global.section.settings": "Настройки",
-  "global.section.meters": "ИПУ",
+  "global.section.meters": "Приборы учета",
   "global.section.miniapps": "Сервисы",
   "global.section.SPP": "Платежи от физлиц",
   "global.available": "Есть",
@@ -579,9 +579,11 @@
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
-  "pages.condo.meter.index.PageTitle": "ИПУ",
+  "pages.condo.meter.index.PageTitle": "Приборы учета",
   "pages.condo.meter.index.EmptyList.header": "Показания ИПУ пока не добавлены",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить показания",
+  "pages.condo.meter.index.meterTab": "Показания ИПУ",
+  "pages.condo.meter.index.propertyMeterTab": "Показания ОДПУ",
   "pages.condo.meter.Place": "Место",
   "pages.condo.meter.MeterReading": "Показание",
   "pages.condo.meter.MeterReadingDate": "Дата снятия",
@@ -1072,6 +1074,7 @@
   "meterReadingSource.Messenger.name": "Мессенджеры (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Соц. сети (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "ЛК приложение сотрудника",
+  "meterReadingSource.crm.name": "CRM",
   "meterResource.ColdWater.name": "Холодная вода",
   "meterResource.HotWater.name": "Горячая вода",
   "meterResource.Electricity.name": "Электроэнергия",
