feat(condo): DOMA-6219 Small fixes within news items feature (#3417)
* feat(condo): DOMA-6219 The `news` menu item was added

* chore(condo): DOMA-6219 schema doc was updated

* fix(condo): DOMA-6219 some ui-bugs fixed

* fix(condo): DOMA-6219 The countdown was added to button

* fix(condo): DOMA-6219 fixes regex check and conditions for displaying alert

* fix(condo): DOMA-6334 fixed RecipientCounter by form update and display of sections in form (#3432)

* fix(condo): DOMA-6219 The recipients counter was improved

* fix(condo): DOMA-6219 Validation fixed

* fix(condo): DOMA-6219 try to fix recipients exporting

* fix(condo): DOMA-6219 The news item number printed to the page

* fix(condo): DOMA-6219 Hide recipients counter if no recipients were selected

* fix(condo): DOMA-6219 Hide preview if no title and no news item body

* feat(condo): DOMA-6219 User's timezone was added

* feat(condo): DOMA-6219 default role permissions + tz displaying fixed

* feat(condo): DOMA-6219 gql fields list was updated

* feat(condo): DOMA-6219 hide menu item

---------

Co-authored-by: Kirik <lgstrwrs@gmail.com>
Co-authored-by: Kirik <93817911+Kekmus@users.noreply.github.com>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -191,6 +191,7 @@
   "global.section.settings": "Settings",
   "global.section.meters": "Meters log",
   "global.section.miniapps": "Services",
+  "global.section.newsItems": "News",
   "global.section.SPP": "Payments from individuals",
   "global.available": "Available",
   "global.notAvailable": "Not available",
@@ -2055,5 +2056,6 @@
   "incident.changeHistory.workStart": "work start",
   "incident.changeHistory.workFinish": "work finish",
   "incident.changeHistory.workType": "work type",
-  "incident.hints.more.label": "More details"
+  "incident.hints.more.label": "More details",
+  "timezone.msk": "MSK"
 }
