feat(condo): DOMA-5825 added skipNoAccountNotifications flag to BillingIntegration, billingProperty support to SendNewReceiptMessagesToResidentScopesService, some refactoring done (rebased) (#3453)
feat(condo): DOMA-5825 fixed migration x 3 times
feat(condo): DOMA-5825 fixed templates, updated eps submodule
feat(condo): DOMA-5825 fixed notification templates
feat(condo): DOMA-5825 fixes after review

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1243,8 +1243,8 @@
   "notification.messages.BILLING_RECEIPT_AVAILABLE.push.title": "Check out your utility bill",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.email.subject": "Check out your utility bill",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.push.title": "Check out your utility bill",
-  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "Check out your utility bill",
-  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "Check out your utility bill",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "New utility bill",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "New utility bill",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.email.subject": "Add billing account number please",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.push.title": "Add billing account number please",
   "notification.messages.METER_VERIFICATION_DATE_REMINDER.email.subject": "Time to do meters verification!",
@@ -1691,7 +1691,7 @@
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CONTEXT_PROVIDED": "Please provide existing non-deleted billing integration organization context id",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CATEGORY_PROVIDED": "Please provide existing non-deleted billing category id",
   "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
-  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PROPERTY_PROVIDED": "All provided properties in scopes should be non-deleted & connected to organization of the billing context",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_PROPERTY_PROVIDED": "All provided billing properties in scopes should be non-deleted & connected to organization of the billing context",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
   "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Unable to find user by provided id.",
   "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Unable to find resident by provided id.",
