feat(condo): DOMA-6302 play audio on new tickets on refetch (#3424)
* feat(condo): DOMA-6302 play audio on new tickets on refetch

* feat(condo): DOMA-6302 add title blinking on new ticket + check permission to play sound

* feat(condo): DOMA-6302 add favicon change on new tickets

* feat(callcenter): DOMA-6302 update submodule

* feat(callcenter): DOMA-6302 update submodule

* fix(condo): DOMA-6302 bring original favicon back on page focus

* fix(condo): DOMA-6302 save previous count value at context

* fix(condo): DOMA-6302 change infinity favicon

* fix(condo): DOMA-6302 original title save changed

* fix(callcenter): DOMA-6302 update submodule

* fix(condo): DOMA-6302 initial load new ticket count & set original title at context provider

* fix(config): DOMA-6302 update audio config for cc

* fix(callcenter): DOMA-6302 add title context provider for cc

* fix(callcenter): DOMA-6302 add favicon id to callcenter document

* fix(condo): DOMA-6302 safari audio play only after user click and unmute object

* chore(global): DOMA-6302 update helm to master branch

* chore(global): DOMA-6302 update callcenter to master branch

* chore(condo): DOMA-6302 add task number to TODO note

* fix(condo): DOMA-6302 check if audio exist at hook

---------

Co-authored-by: Sitnikov Ivan <sit7602@gmail.com>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -678,6 +678,8 @@
   "pages.condo.ticket.index.ResetFilters": "Reset",
   "pages.condo.ticket.index.CancelSelectedTicket": "Deselect",
   "pages.condo.ticket.index.CountSelectedTicket": "Items selected",
+  "pages.condo.ticket.index.fewNewTicketsTitle": "New tickets: {count}",
+  "pages.condo.ticket.index.manyNewTicketsTitle": "Lots of new tickets",
   "pages.condo.ticket.exportBlank.title": "Add to Form for Printing",
   "pages.condo.ticket.exportBlank.SaveToPDF.label": "Print",
   "pages.condo.ticket.exportBlank.SaveToPDF.tooltip": "You can print up to 50 tickets at a time",
