feat(condo): DOMA-6329 schema meter reporting period (#3452)
* feat(condo): DOMA-6329 init MeterReportingPeriod

* feat(condo): DOMA-6329 MeterReportingPeriod schema

* chore(condo): DOMA-6329 make migrations and types

chore(condo): DOMA-6329 make types and migrations

* chore(condo): DOMA-6329 rm redundant files created by the createschema script

* fix(condo): DOMA-6329 add test and fix resident access

* chore(condo): DOMA-6329 fixes after review

* chore(condo): DOMA-6329 added translates for ORGANIZATION_IS_REQUIRED GQLError

* chore(condo): DOMA-6329 regenerate migrations & add tests of schema and field hooks

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1643,6 +1643,9 @@
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "No meter readings to export for specified organization",
   "api.meter.METER_NUMBER_HAVE_INVALID_VALUE": "Meter number field value cannot be empty",
   "api.meter.METER_ACCOUNT_NUMBER_HAVE_INVALID_VALUE": "Account number field value cannot be empty",
+  "api.meter.MeterReportingPeriod.INVALID_FINISH": "The \"finish\" field can take values in the range from 1 to 31",
+  "api.meter.MeterReportingPeriod.INVALID_START": "The \"start\" field can take values in the range from 1 to 31",
+  "api.meter.MeterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Organization is required for create meter reading reporting period",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "No contacts found for export",
   "api.propertyScope.MAX_NAME_LENGTH_ERROR": "Exceeded the maximum number of characters in the title ({max} characters)",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No property scopes found for export",
