--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1643,6 +1643,9 @@
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "Нет показаний ИПУ для экспорта, которые связаны с указанной организацией",
   "api.meter.METER_NUMBER_HAVE_INVALID_VALUE": "Номер счетчика не может быть пустым",
   "api.meter.METER_ACCOUNT_NUMBER_HAVE_INVALID_VALUE": "Лицевой счет не может быть пустым",
+  "api.meter.MeterReportingPeriod.INVALID_FINISH": "Конец периода может принимать значение только от 1 до 31",
+  "api.meter.MeterReportingPeriod.INVALID_START": "Начало периода может принимать значение только от 1 до 31",
+  "api.meter.MeterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Необходима организация для создания периода сдачи показаний",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "Не найдено контактов для экспорта",
   "api.propertyScope.MAX_NAME_LENGTH_ERROR": "Превышено максимальное количество символов в названии ({max} символов)",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "Не найдено областей видимости для экспорта",
