feat(condo): DOMA-5062 updated password validation (#3420)
* feat(condo): DOMA-5062 updated password validation

* fix(condo): DOMA-5062 removed console.log

* test(condo): DOMA-5062 fixed tests

* refactor(condo): DOMA-5062 moved password validations from User schema to changePasswordWithToken and registerNewUser mutations

* refactor(condo): DOMA-5062 refactored user errors

* fix(condo): DOMA-5062 fixed password validations

* test(condo): DOMA-5062 added tests

* chore(condo): DOMA-5062 updated schema

* fix(condo): DOMA-5062 fixed imports

* refactor(condo): DOMA-5062 refactored password validations

* test(condo): DOMA-5062 added test for check sigin by old invalid passwords

* chore(condo): DOMA-5062 removed console.log

* chore(condo): DOMA-5062 updated schema

* refactor(condo): DOMA-5062 refactored password validations

* fix(condo): DOMA-5062 added password validations if user update password

* refactor(condo): DOMA-5062 refactored after review

* refactor(condo): DOMA-5062 moved password validations to User schema

* feat(condo): DOMA-5062 removed space check

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1628,9 +1628,14 @@
   "api.banking.BankSyncTask.INCORRECT_DATE_INTERVAL": "Incorrect date interval",
   "api.banking.BankSyncTask.ACCOUNT_IS_REQUIRED": "Bank account is required",
   "api.banking.BankSyncTask.DISABLED_BANK_INTEGRATION_ORGANIZATION_CONTEXT": "Integration is disabled for current organization",
-  "api.user.PASSWORD_IS_TOO_SHORT": "Password length is less then {min} characters",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "This password is weak or too obvious please choose something more secure",
   "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
+  "api.user.WRONG_PASSWORD_FORMAT": "Password must be in string format",
+  "api.user.INVALID_PASSWORD_LENGTH": "Password length must be between {min} and {max} characters",
+  "api.user.PASSWORD_CONTAINS_EMAIL": "Password must not contain email",
+  "api.user.PASSWORD_CONTAINS_PHONE": "Password must not contain phone",
+  "api.user.PASSWORD_CONTAINS_NAME": "Password must not contain mane",
+  "api.user.PASSWORD_CONSISTS_OF_SMALL_SET_OF_CHARACTERS": "Password must contain at least {min} different characters",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.sendMessageToSupport.WRONG_EMAIL_FORMAT": "Wrong format of specified email",
   "api.ticket.exportTicketsToExcel.NOTHING_TO_EXPORT": "No tickets to export",
