--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1628,9 +1628,14 @@
   "api.banking.BankSyncTask.INCORRECT_DATE_INTERVAL": "Некорректный период",
   "api.banking.BankSyncTask.ACCOUNT_IS_REQUIRED": "Требуется расчетный счет",
   "api.banking.BankSyncTask.DISABLED_BANK_INTEGRATION_ORGANIZATION_CONTEXT": "Интеграция отключена для текущей организации",
-  "api.user.PASSWORD_IS_TOO_SHORT": "Длина введённого пароля меньше {min} символов",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "Пароль слишком простой. Нужно использовать что-то более безопасное",
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
+  "api.user.WRONG_PASSWORD_FORMAT": "Пароль должен быть строкой",
+  "api.user.INVALID_PASSWORD_LENGTH": "Длина пароля должна быть от {min} до {max} символов",
+  "api.user.PASSWORD_CONTAINS_EMAIL": "Пароль не может быть похож на email",
+  "api.user.PASSWORD_CONTAINS_PHONE": "Пароль не может быть похож на телефон",
+  "api.user.PASSWORD_CONTAINS_NAME": "Пароль не может быть похож на имя",
+  "api.user.PASSWORD_CONSISTS_OF_SMALL_SET_OF_CHARACTERS": "Пароль должен содержать не менее {min} разных символов",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Не найден действительный токен на изменение пароля",
   "api.user.sendMessageToSupport.WRONG_EMAIL_FORMAT": "Неверный формат адреса электронной почты",
   "api.ticket.exportTicketsToExcel.NOTHING_TO_EXPORT": "Нет заявок для экспорта",
