feat(condo): DOMA-5615 billing self-service (#3337)
* feat(condo): DOMA-5615 billing self-service

* chore(condo): DOMA-5615 remove non-nulls constrains

* feat(condo): DOMA-5615 added sbbol auth

* chore(condo): DOMA-5615 migrations rebase

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -222,6 +222,28 @@
   "global.globalHints.canDisableHints": "You can disable these hints in",
   "global.globalHints.canDisableHints.inProfile": "profile",
   "global.globalHints.banner.more": "More",
+  "accrualsAndPayments.setup.title": "Accruals and payments setup",
+  "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
+  "accrualsAndPayments.setup.setupBillingStep.title": "Integration setup",
+  "accrualsAndPayments.setup.setupAcquiringStep.title": "Signing the offer",
+  "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
+  "accrualsAndPayments.setup.verificationNeeded.title": "Authorize via SberBusiness ID",
+  "accrualsAndPayments.setup.verificationNeeded.message.certs": "To complete the integration setup, authorize via Sber. Authorization will only work with security certificates installed. Learn more about them {link}.",
+  "accrualsAndPayments.setup.verificationNeeded.message.contact": "If you don't have a SberBusiness ID, send a request to {email}. We'll send you a contract in a reply message.",
+  "accrualsAndPayments.setup.verificationNeeded.link": "here",
+  "accrualsAndPayments.onBoardingModal.title": "About the section",
+  "accrualsAndPayments.onBoardingModal.text": "For residents to pay their receipts via the Doma mobile app, select the download method and sign the offer. From then on, all payments will be displayed in this section.",
+  "accrualsAndPayments.onBoardingModal.closeButton.message": "Thank you for sharing",
+  "accrualsAndPayments.billingModal.receiptAwaitingTime": "Time to load receipts into the Doma app:",
+  "accrualsAndPayments.billingModal.setupButtonLabel": "Set up",
+  "accrualsAndPayments.setupBilling.instruction.doneButtonLabel": "Everything is ready",
+  "accrualsAndPayments.setupBilling.instruction.instructionButtonLabel": "Check the instructions",
+  "accrualsAndPayments.billing.statusTag.connected": "{name}: connected",
+  "accrualsAndPayments.billing.statusTag.error": "{name}: error",
+  "accrualsAndPayments.billing.noReceiptsYet": "Connected, but no receipt yet",
+  "accrualsAndPayments.billing.uploadReceiptsAction.defaultMessage": "Upload receipts",
+  "accrualsAndPayments.payments.noPaymentsYet.title": "No payments yet",
+  "accrualsAndPayments.payments.noPaymentsYet.message": "Residents have not yet paid any receipts. As soon as this happens, the transaction information will appear here.",
   "miniapps.catalog.banner.more": "More",
   "miniapps.catalog.noServicesInCategory": "There are no services in this category yet",
   "miniapps.catalog.noServicesFound": "There is no such service",
