--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -222,6 +222,28 @@
   "global.globalHints.canDisableHints": "Отключить эти подсказки можно в",
   "global.globalHints.canDisableHints.inProfile": "профиле",
   "global.globalHints.banner.more": "Как это работает",
+  "accrualsAndPayments.setup.title": "Настройка начислений и оплат",
+  "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
+  "accrualsAndPayments.setup.setupBillingStep.title": "Настройка интеграции",
+  "accrualsAndPayments.setup.setupAcquiringStep.title": "Подписание офферты",
+  "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
+  "accrualsAndPayments.setup.verificationNeeded.title": "Авторизуйтесь через СберБизнес ID",
+  "accrualsAndPayments.setup.verificationNeeded.message.certs": "Чтобы завершить настройку интеграции, авторизуйтесь через Сбер. Авторизация будет работать только с установленными сертификатами безопасности. Узнать подробнее о них можно {link}.",
+  "accrualsAndPayments.setup.verificationNeeded.message.contact": "Если у вас нет СберБизнес ID, отправьте запрос на {email}. Мы пришлем договор в ответном письме.",
+  "accrualsAndPayments.setup.verificationNeeded.link": "здесь",
+  "accrualsAndPayments.onBoardingModal.title": "О разделе",
+  "accrualsAndPayments.onBoardingModal.text": "Чтобы жители оплачивали квитанции через мобильное приложение Doma, выберите способ загрузки и подпишите оферту. С этого момента все оплаты будут отображаться в этом разделе.",
+  "accrualsAndPayments.onBoardingModal.closeButton.message": "Спасибо, что рассказали",
+  "accrualsAndPayments.billingModal.receiptAwaitingTime": "Срок загрузки квитанций в приложение Doma:",
+  "accrualsAndPayments.billingModal.setupButtonLabel": "Настроить",
+  "accrualsAndPayments.setupBilling.instruction.doneButtonLabel": "Все готово",
+  "accrualsAndPayments.setupBilling.instruction.instructionButtonLabel": "Заглянуть в инструкцию",
+  "accrualsAndPayments.billing.statusTag.connected": "{name}: подключено",
+  "accrualsAndPayments.billing.statusTag.error": "{name}: ошибка",
+  "accrualsAndPayments.billing.noReceiptsYet": "Подключено, но квитанций пока нет",
+  "accrualsAndPayments.billing.uploadReceiptsAction.defaultMessage": "Загрузить квитанции",
+  "accrualsAndPayments.payments.noPaymentsYet.title": "Оплат пока нет",
+  "accrualsAndPayments.payments.noPaymentsYet.message": "Жители не оплатили ни одной квитанции. Как только это случится, информация о транзакциях появится здесь.",
   "miniapps.catalog.banner.more": "Подробнее",
   "miniapps.catalog.noServicesInCategory": "Сервисов в этой категории пока нет",
   "miniapps.catalog.noServicesFound": "Такого сервиса нет",
