--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -312,6 +312,7 @@
   "global.noPageViewPermission": "У вас нет прав для просмотра данной страницы",
   "NumberIsNotValid": "Пожалуйста, введите корректное число",
   "CompanyName": "Домá",
+  "MobileAppName": "Doma",
   "ContactSupportToCancelIntegration": "Чтобы отключить интеграцию свяжитесь с тех. поддержкой «{company}».",
   "ClickToSeeMore": "Нажмите, чтобы посмотреть подробнее",
   "ClearAllFilters": "Сбросить все фильтры",
