--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -730,6 +730,7 @@
   "pages.condo.ticket.title.TicketChanges": "Change log of the ticket",
   "pages.condo.ticket.title.TicketFromResident": "Ticket from resident",
   "pages.condo.ticket.title.TicketNotFromResident": "Ticket not from resident",
+  "pages.condo.ticket.title.MeterReadingsFromResident": "Meter readings from resident",
   "pages.condo.ticket.alert.BlockedEditing.title": "Ticket editing is not available",
   "pages.condo.ticket.alert.BlockedEditing.description": "You cannot change ticket because the selected address is no longer in service",
   "pages.condo.ticket.TicketChanges.add": "added {field}. Now it is {to}",
