fix(condo): DOMA-6453 The `publishedAt` field was added (#3493)
* fix(condo): DOMA-6453 The `publishedAt` field was added

Also throw an error on trying to publish news item without any scopes

* fix(condo): DOMA-6453 Fix roles permissions according to requirements

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1716,6 +1716,7 @@
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
   "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Profanity detected",
   "api.newsItem.WRONG_SEND_DATE": "Wrong send date",
+  "api.newsItem.NO_NEWS_ITEM_SCOPES": "Scope-less news item publishing is forbidden",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Please provide proper period not before start of previous and not later than start of current month, valid format is YYYY-MM-DD",
