feat(condo): DOMA-6438 design fix and fix unitTypes selection (#3477)
* feat(condo): DOMA-6438 design fix and fix unitTypes selection

* feat(condo): DOMA-6438 added support for empty scopes

* refactor(condo): DOMA-6438 changed some messages

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1221,9 +1221,11 @@
   "news.component.RecipientCounter.mailing": "Mailing",
   "news.component.RecipientCounter.label.properties": "houses",
   "news.component.RecipientCounter.willReceive.label": "will receive",
-  "news.component.RecipientCounter.willReceive.hint": "In {count} units found users of mobile app Doma — they will receive letter",
+  "news.component.RecipientCounter.willReceive.hint": "In {count} units found users of mobile app Doma — they will receive letter.",
+  "news.component.RecipientCounter.willReceive.hintZero": "There are no units with Doma mobile app users.",
   "news.component.RecipientCounter.willNotReceive.label": "will not receive",
-  "news.component.RecipientCounter.willNotReceive.hint": "There is no users of mobile app Doma in these units — they will not receive letter. Download a list of addresses to know who is using the app",
+  "news.component.RecipientCounter.willNotReceive.hint": "In {count} units is no users of mobile app Doma. Download the list to find out which units have users.",
+  "news.component.RecipientCounter.willNotReceive.hintZero": "There are no Doma mobile app users in these units. Download the list to find out which units have users.",
   "news.component.RecipientCounter.toResidentsInAllProperties": " to all addresses",
   "news.component.RecipientCounter.toResidentsInProperty": " to property: {address}",
   "news.component.RecipientCounter.toResidentsInProperties": " to addresses: {addressList}{andMore}}",
