--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1045,6 +1045,7 @@
   "news.fields.emptyTemplate.title": "Без шаблона",
   "news.fields.validBefore.error": "Время отправки новости не совпадает со сроком ее актуальности. Измените срок, чтобы отправить новость.",
   "news.fields.toManyMessages.error": "Мы рекомендуем отправлять не более 5 новостей в день, чтобы не докучать жителям. Лучше отложить отправку на завтра.",
+  "news.fields.templates": "Шаблоны",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.createNews": "Добавить новость",
@@ -1232,7 +1233,7 @@
   "news.component.RecipientCounter.toResidentsInProperties.andMore": " и ещё {count, plural, one {# адрес} few {# адреса} other {# адресов}}",
   "news.component.RecipientCounter.toResidentsInPropertySection": " по подъезду {section} по адресу {address}",
   "news.component.RecipientCounter.toResidentsInPropertySections": " по подъездам {sections} по адресу {address}",
-  "news.component.RecipientCounter.toResidentsInPropertyUnits": " по квартирам {unitNames} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits": " по помещениям {unitNames} по адресу {address}",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Обращение из мобильного приложения",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "Вас пригласили присоединиться к организации в качестве сотрудника",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "Вас пригласили присоединиться к организации в качестве сотрудника",
